--- a/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\AARect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Disk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vec3.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\rt_stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Disk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
