--- a/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="src\Disk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\AABB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
