--- a/UntitledRayTracer/UntitledRayTracer.vcxproj
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\AABB.cpp" />
     <ClCompile Include="src\Disk.cpp" />
     <ClCompile Include="src\HittableList.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
