--- a/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\Disk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\AABB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vec3.h">
