--- a/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\AABB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\BVHNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Vec3.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\AABB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\BVHNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
