Transformations - Translate and Scale
Added translation and scale transformations to hittable objects (scale only applies to meshes at the moment, do not see why scale would be used otherwise).

--- a/UntitledRayTracer/UntitledRayTracer.vcxproj
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="src\Colour.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\AARect.cpp" />
+    <ClCompile Include="src\Transform.cpp" />
     <ClCompile Include="src\Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +169,7 @@
     <ClInclude Include="src\Hittable.h" />
     <ClInclude Include="src\Ray.h" />
     <ClInclude Include="src\Texture.h" />
+    <ClInclude Include="src\Transform.h" />
     <ClInclude Include="src\Vec3.h" />
     <ClInclude Include="src\AARect.h" />
     <ClInclude Include="src\Triangle.h" />
