--- a/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
+++ b/UntitledRayTracer/UntitledRayTracer.vcxproj.filters
@@ -116,5 +116,11 @@
     <ClInclude Include="src\Transform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ONB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PDF.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
