Add Sampler class, create RNG per thread

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ target_sources(ray
         memory.h
         ONB.h
         PDF.h
+        sampler.h
         scene.h
         scene.cpp
         timer.h
