Add OpenImageIO support for image output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,13 @@ cmake_minimum_required(VERSION 3.13.0)
 project(Ray)
 
 add_executable(ray "")
-target_include_directories(ray PRIVATE ${ARGPARSE_INCLUDE_DIR})
+find_package(OpenImageIO REQUIRED)
+target_include_directories(
+    ray 
+        PRIVATE 
+        ${ARGPARSE_INCLUDE_DIR} 
+        ${OpenImageIO_INCLUDE_DIR}
+)
+target_link_libraries(ray PRIVATE OpenImageIO::OpenImageIO)
 
 add_subdirectory(src)
