Add OBJLoader class

--- a/src/librayengine/geom/CMakeLists.txt
+++ b/src/librayengine/geom/CMakeLists.txt
@@ -4,7 +4,8 @@ target_sources(rayengine
         BVHNode.cpp
         Disk.cpp
         HittableList.cpp
-        Mesh.cpp
+#        Mesh.cpp
+        meshLoader.cpp
         Sphere.cpp
         Transform.cpp
         Triangle.cpp
