Expose various render settings to hydra

--- a/src/hdMrRay/CMakeLists.txt
+++ b/src/hdMrRay/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(hdMrRay PRIVATE hd mrRayEngine)
 
 target_sources(hdMrRay
     PRIVATE
+        config.cpp
         mesh.cpp
         renderBuffer.cpp
         renderDelegate.cpp
